// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar.vue should have is-user-notification class when the user has a notification 1`] = `
<nav class="navbar has-user-notification">
  <ul class="navbar-elementsContainer">
    <router-link to="[object Object]" staticroute="/dashboard" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/home.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Home</span></router-link>
    <router-link to="[object Object]" active-class="is-active" staticroute="/dashboard/maps" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/maps.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Maps</span></router-link>
    <router-link to="[object Object]" active-class="is-active" staticroute="/dashboard/datasets" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/data.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Data</span></router-link> <span class="navbar-elementItem navbar-icon navbar-searchIcon u-showMobile"><img svg-inline="" src="../../assets/icons/navbar/loupe_white.svg"></span>
  </ul>
  <div class="navbar-imagotype u-hideMobile"><img src="../../assets/icons/navbar/imagotype.svg"></div>
  <div class="navbar-elementsContainer navbar-searchContainer">
    <search-stub></search-stub>
    <div class="navbar-user">
      <div class="navbar-avatar" style="background-image: url(//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/unversioned/images/avatars/avatar_ghost_yellow.png);"></div>
      <userdropdown-stub baseurl="" usermodel="[object Object]"></userdropdown-stub>
      <!---->
    </div> <span class="navbar-searchClose"><img svg-inline="" src="../../assets/icons/navbar/close.svg"></span>
  </div>
</nav>
`;

exports[`NavigationBar.vue should render regular navbar with search input open 1`] = `
<nav class="navbar is-search-open">
  <ul class="navbar-elementsContainer">
    <router-link to="[object Object]" staticroute="/dashboard" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/home.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Home</span></router-link>
    <router-link to="[object Object]" active-class="is-active" staticroute="/dashboard/maps" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/maps.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Maps</span></router-link>
    <router-link to="[object Object]" active-class="is-active" staticroute="/dashboard/datasets" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/data.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Data</span></router-link> <span class="navbar-elementItem navbar-icon navbar-searchIcon u-showMobile"><img svg-inline="" src="../../assets/icons/navbar/loupe_white.svg"></span>
  </ul>
  <div class="navbar-imagotype u-hideMobile"><img src="../../assets/icons/navbar/imagotype.svg"></div>
  <div class="navbar-elementsContainer navbar-searchContainer">
    <search-stub></search-stub>
    <div class="navbar-user">
      <div class="navbar-avatar" style="background-image: url(//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/unversioned/images/avatars/avatar_ghost_yellow.png);"></div>
      <userdropdown-stub baseurl="" usermodel="[object Object]"></userdropdown-stub>
      <!---->
    </div> <span class="navbar-searchClose"><img svg-inline="" src="../../assets/icons/navbar/close.svg"></span>
  </div>
</nav>
`;

exports[`NavigationBar.vue should render regular navbar with user dropdown close after having opened it 1`] = `
<nav class="navbar">
  <ul class="navbar-elementsContainer">
    <router-link to="[object Object]" staticroute="/dashboard" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/home.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Home</span></router-link>
    <router-link to="[object Object]" active-class="is-active" staticroute="/dashboard/maps" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/maps.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Maps</span></router-link>
    <router-link to="[object Object]" active-class="is-active" staticroute="/dashboard/datasets" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/data.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Data</span></router-link> <span class="navbar-elementItem navbar-icon navbar-searchIcon u-showMobile"><img svg-inline="" src="../../assets/icons/navbar/loupe_white.svg"></span>
  </ul>
  <div class="navbar-imagotype u-hideMobile"><img src="../../assets/icons/navbar/imagotype.svg"></div>
  <div class="navbar-elementsContainer navbar-searchContainer">
    <search-stub></search-stub>
    <div class="navbar-user">
      <div class="navbar-avatar" style="background-image: url(//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/unversioned/images/avatars/avatar_ghost_yellow.png);"></div>
      <userdropdown-stub baseurl="" usermodel="[object Object]"></userdropdown-stub>
      <!---->
    </div> <span class="navbar-searchClose"><img svg-inline="" src="../../assets/icons/navbar/close.svg"></span>
  </div>
</nav>
`;

exports[`NavigationBar.vue should render regular navbar with user dropdown closed 1`] = `
<nav class="navbar">
  <ul class="navbar-elementsContainer">
    <router-link to="[object Object]" staticroute="/dashboard" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/home.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Home</span></router-link>
    <router-link to="[object Object]" active-class="is-active" staticroute="/dashboard/maps" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/maps.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Maps</span></router-link>
    <router-link to="[object Object]" active-class="is-active" staticroute="/dashboard/datasets" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/data.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Data</span></router-link> <span class="navbar-elementItem navbar-icon navbar-searchIcon u-showMobile"><img svg-inline="" src="../../assets/icons/navbar/loupe_white.svg"></span>
  </ul>
  <div class="navbar-imagotype u-hideMobile"><img src="../../assets/icons/navbar/imagotype.svg"></div>
  <div class="navbar-elementsContainer navbar-searchContainer">
    <search-stub></search-stub>
    <div class="navbar-user">
      <div class="navbar-avatar" style="background-image: url(//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/unversioned/images/avatars/avatar_ghost_yellow.png);"></div>
      <userdropdown-stub baseurl="" usermodel="[object Object]"></userdropdown-stub>
      <!---->
    </div> <span class="navbar-searchClose"><img svg-inline="" src="../../assets/icons/navbar/close.svg"></span>
  </div>
</nav>
`;

exports[`NavigationBar.vue should render regular navbar with user dropdown open 1`] = `
<nav class="navbar">
  <ul class="navbar-elementsContainer">
    <router-link to="[object Object]" staticroute="/dashboard" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/home.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Home</span></router-link>
    <router-link to="[object Object]" active-class="is-active" staticroute="/dashboard/maps" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/maps.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Maps</span></router-link>
    <router-link to="[object Object]" active-class="is-active" staticroute="/dashboard/datasets" class="navbar-elementItem"><span class="navbar-icon"><img svg-inline="" src="../../assets/icons/navbar/data.svg" class="navbar-iconFill"></span> <span class="title is-caption is-txtWhite u-hideTablet">Data</span></router-link> <span class="navbar-elementItem navbar-icon navbar-searchIcon u-showMobile"><img svg-inline="" src="../../assets/icons/navbar/loupe_white.svg"></span>
  </ul>
  <div class="navbar-imagotype u-hideMobile"><img src="../../assets/icons/navbar/imagotype.svg"></div>
  <div class="navbar-elementsContainer navbar-searchContainer">
    <search-stub></search-stub>
    <div class="navbar-user">
      <div class="navbar-avatar" style="background-image: url(//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/unversioned/images/avatars/avatar_ghost_yellow.png);"></div>
      <userdropdown-stub baseurl="" usermodel="[object Object]" open="true"></userdropdown-stub>
      <!---->
    </div> <span class="navbar-searchClose"><img svg-inline="" src="../../assets/icons/navbar/close.svg"></span>
  </div>
</nav>
`;
